compiler/tests/success/x86-64/test_movcc.jazz
export
fn identity(reg u64 x, reg u64 y) -> reg u64 {
  reg u64 r;
  r = x;
  r = x if (x == y);
  return r;
}
