compiler/tests/fail/x86-64/shift.jazz
export
fn main() -> reg u64 {
    reg u64 x;
    x = 1;
    x <<= x;
    return x;
}
